--- a/client/src/app/image-style-card/image-style-card.component.css
+++ b/client/src/app/image-style-card/image-style-card.component.css
@@ -63,6 +63,7 @@ input[type="number"]{
 input[type="text"]{
     margin: 0 3px;
     padding: 2px;
+    max-width: 125px;
     box-sizing: border-box;
     background: transparent;
     color: #D6F9DD;
