--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -4,19 +4,28 @@
     min-width: 375px;
     display: grid;
     grid-template-rows: 500px 10px 1fr;
+    grid-template-areas:
+        "render"
+        "editorResizer"
+        "control";
     margin: 0;
     padding: 0;
+    position: relative;
 } 
 
 #slide-render-area {
+    grid-area: render;
     height: 100%;
     width: 100%;
     overflow: scroll;
     background: linear-gradient(to bottom right, rgb(16, 16, 17), rgb(53, 53, 53));
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 #slide-editor-resizer {
+    grid-area: editorResizer;
     width: 100%;
     height: 100%;
     background: gray;
@@ -28,10 +37,14 @@
 }
 
 #slide-control {
+    grid-area: control;
     height: 100%;
     width: 100%;
     display: grid;
     grid-template-rows: auto 1fr;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .slide-object {
@@ -107,6 +120,7 @@ input[type="text"]{
     overflow-x: hidden;
     overflow-y: scroll;
     width: 100%;
+    position: relative;
 }
 
 .heirarchy-control-group {
@@ -114,6 +128,7 @@ input[type="text"]{
     overflow: hidden;
     padding: 2px 0;
     font-weight: normal;
+    position: relative;
 }
 
 .heirarchy-control-group h5 {
@@ -161,6 +176,7 @@ input[type="text"]{
     flex-wrap: wrap;
     padding: 2px 0;
     border-bottom: 3px rgb(81, 133, 81) solid; 
+    position: relative;
 }
 
 .md-color-selector {
