--- a/client/src/app/image-style-card/image-style-card.component.html
+++ b/client/src/app/image-style-card/image-style-card.component.html
@@ -19,7 +19,7 @@
     <div class="flex-row-between style-card-row">
       <h4>Padding:</h4>
       <h4>
-        <input type="number" [(ngModel)]="imageStyle.padding">px</h4>
+        <input type="number" [(ngModel)]="imageStyle.padding">px&nbsp;&nbsp;</h4>
     </div>
 
   <div class="flex-row-between style-card-row">
