Added pixabay image search

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   
   <div id="toolbar" #toolbar>
-  <toolbar class="grayAccent01 flex-row-between"></toolbar>
+  <toolbar></toolbar>
   </div>
 
   <div id="toolbar-secondary">
