--- a/client/src/app/toolbar-secondary/toolbar-secondary.component.css
+++ b/client/src/app/toolbar-secondary/toolbar-secondary.component.css
@@ -17,7 +17,7 @@
 }
 
 .toolbar2-btn-group fa {
-    font-size: 2vh;
+    font-size: 1.2rem;
     margin: 0;
     padding: 2px 4px;
 }
@@ -35,7 +35,7 @@
 }
 
 #slide-nav-group fa {
-    font-size:2vh;
+    font-size:1.2rem;
     padding: 15px;
 }
 
